--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to MySuperstarcity!</title>
+    <style>
+        body {
+            background-image: url('/static/background.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 50% 50%;
+            background-position: center bottom;
+        }
+    </style>
 </head>
 <body>
     <div align="center">
         <h1>
+            <br>
             Welcome to MySuperstarcity!
             <br>
             <br>
