--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,40 @@
     </style>
 </head>
 <body>
+    <div align="center" style="width: 100%; float: left">
+        <div align="center" style="width: 20%; float: left;">
+            <div align="left" style="width: 20%; float: left;">
+                <img border="0" src="{{ url_for('static', filename='tradingbotspro.png') }}" width="55" height="55">
+            </div>
+            <div align="left" style="width: 77%; float: right;">
+                <a href="https://www.youtube.com/@tradingbotspro" target="_blank">
+                    Feel free to visit my YouTube channel about algorithmic trading (English)
+                </a>
+            </div>
+        </div>
+        <div align="center" style="width: 60%; float: left;">
+            <h1>
+                <br>
+                Welcome to MySuperstarcity!
+                <br>
+                <br>
+                Let's check how superstar you are! ;0)
+                <br>
+                <br>
+            </h1>
+        </div>
+        <div align="center" style="width: 20%; float: left;">
+            <div align="left" style="width: 20%; float: left;">
+                <img border="0" src="{{ url_for('static', filename='ds_logo.png') }}" width="55" height="55">
+            </div>
+            <div align="left" style="width: 80%; float: right;">
+                <a href="https://www.youtube.com/@datascience_0inf" target="_blank">
+                    Feel free to visit my YouTube channel about my path in Data Science (Russian)
+                </a>
+            </div>
+        </div>
+    </div>
     <div align="center" style="width: 100%;">
-        <h1>
-            <br>
-            Welcome to MySuperstarcity!
-            <br>
-            <br>
-            Let's check how superstar you are! ;0)
-            <br>
-            <br>
-        </h1>
         <div align="center" style="width: 20%; float: left;">
             <h3>
                 We have the following honour men in our model:
